...
                ShortcutListItem("A", stringResource(R.string.open_new_task_shortcut))
                Text(
                    text = stringResource(R.string.new_task_shortcuts),
                    modifier = Modifier.padding(top = 16.dp, start = 16.dp),
                    style = MaterialTheme.typography.titleMedium,
                )
                ShortcutListItem("Alt + Q / W / E / R", stringResource(R.string.select_category_shortcut))
            }

        ScreenTopBar(
            title = { Text(stringResource(R.string.keyboard_shortcuts_title)) },
            navigationIcon = {
                DrawerNavigationButton(onClick = onOpenNavigationDrawer)
...
