...
        floatingActionButton = {
            ExtendedFloatingActionButton(
                onClick = { openNewTask() },
                icon = { Icon(imageVector = Icons.Filled.Add, contentDescription = null) },
                text = { Text(stringResource(R.string.add_task_fab_shortcut)) },
                modifier = Modifier.semantics {
                    contentDescription = "Add task. Keyboard shortcut A"
                },
            )
        },
        snackbarHost = { SnackbarHost(hostState = snackbarHostState) },
    ) { innerPadding ->
        Box(
...
